<resources>
    <string name="app_name">ポーカー\nツール！</string>

    <!-- タブ -->
    <string name="tab1">役一覧</string>
    <string name="tab2">単語集</string>
    <string name="tab3">おまけ</string>

    <!-- 役名 -->
    <string-array name="roleListJp">
        <item>ファイブカード</item>
        <item>ロイヤルフラッシュ</item>
        <item>ストレートフラッシュ</item>
        <item>フォーカード</item>
        <item>フルハウス</item>
        <item>フラッシュ</item>
        <item>ストレート</item>
        <item>スリーカード</item>
        <item>ツーペア</item>
        <item>ワンペア</item>
        <item>ハイカード</item>
    </string-array>
    <string-array name="roleListEng">
        <item>Five Of A Kind</item>
        <item>Royal Flush</item>
        <item>Straight Flush</item>
        <item>Four Of A Kind</item>
        <item>Full House</item>
        <item>Flash</item>
        <item>Straight</item>
        <item>Three Of A Kind</item>
        <item>Two Pair</item>
        <item>One Pair</item>
        <item>High Card</item>
    </string-array>
    <string-array name="roleDescription">
        <item>ワイルドカード(Joker)を使用するルールの場合の最強役\n４枚の同じ数字＋ワイルドカード\n別名「ファイブ・オブ・ア・カインド」</item>
        <item>10.J.Q.K.Aで5枚が全て同じマーク\n別名「ロイヤルストレートフラッシュ」</item>
        <item>連続した5つの数字で5枚全てが同じマーク\n 別名「クワッズ」「フォー・オブ・ア・カインド」</item>
        <item>同じ数字のカードを4枚揃える役</item>
        <item>3カードと1ペアを作る役</item>
        <item>5枚全てが同じマークという役</item>
        <item>5枚の数字が連続している役\nAは特別な役割で、「A,2,3,4,5」「10,J,Q,K,A」が成立する。\n 「K,A,2,3,4」は成立しない</item>
        <item>同じ数字のカードを3枚揃える役\n別名「スリー・オブ・ア・カインド」「セット」「トリップス」</item>
        <item>5枚の中でペアが2つ出来ている役</item>
        <item>ペアが1つの役</item>
        <item>役が存在しない状態\n別名「ブタ」</item>
    </string-array>

    <!-- 単語一覧 -->
    <string-array name="wordListJp">
        <item>オールイン</item>
        <item>コール</item>
        <item>スーツ</item>
        <item>チェック</item>
        <item>ティルト</item>
        <item>ハンド</item>
        <item>フォールド</item>
        <item>ブラフ</item>
        <item>ベット</item>
        <item>ポット</item>
        <item>ランク</item>
        <item>レイズ</item>
    </string-array>
    <string-array name="wordListEng">
        <item>All in</item>
        <item>call</item>
        <item>Suit</item>
        <item>Check</item>
        <item>Tilt</item>
        <item>Hand</item>
        <item>Fold</item>
        <item>Bluff</item>
        <item>Bet</item>
        <item>Pot</item>
        <item>rank</item>
        <item>Raise</item>
    </string-array>
    <string-array name="wordListDescription">
        <item>持っているコインを全て駆けること\n別名「全賭け」</item>
        <item>前のプレイヤーと同額賭けること</item>
        <item>カードの種類（マーク)のこと\n強さ：スペード＞ハート＞ダイヤ＞クラブの順</item>
        <item>賭け金を出さず次の人に回すこと</item>
        <item>勝ちが確定したような状況で、相手に逆転されるなどして\n頭に血が上った状態になること</item>
        <item>手札のこと、場のことを指す場合もある</item>
        <item>賭けずに勝負を降りること\n別名「ドロップ」</item>
        <item>自分のハンドが弱くても、強そうに見せるプレイのこと\nハッタリ</item>
        <item>賭けること</item>
        <item>場全体の賭けコインの合計</item>
        <item>カードの数値のこと\n強さ：A＞K＞Q＞J＞10＞9＞8＞7＞6＞5＞4＞3＞2の順</item>
        <item>掛け金を増やすこと</item>
    </string-array>

    <!--レイアウト内で使用-->
    <string name="people">人数</string>
    <string-array name="peopleNum">
        <item>2人</item>
        <item>3人</item>
        <item>4人</item>
    </string-array>
    <string name="newCoin">初期コイン数</string>
    <string name="betCoin">基本掛けコイン</string>
    <string name="start">スタート</string>
    <string name="newCoinInfo">最初に持っているコイン数</string>
    <string name="betCoinInfo">ベースとなる掛けコイン</string>

    <!-- ベット画面 -->
    <string name="call">コール</string>
    <string name="raise">レイズ</string>
    <string name="fold">フォールド</string>
    <string name="playerBet">所持%d</string>
    <string name="nowBet">現在の掛けコイン%d</string>
    <string name="winner">勝った</string>

    <!-- URL -->
    <string name="privacy">https://www.gensounosakura.work/posts/5751685</string>
    <string name="enquete">https://www.gensounosakura.work/pages/2473622/page_201812262034</string>
    <string name="fantasyBlossomURL">https://www.gensounosakura.work/</string>
    <string name="reviewURL">market://details?id=momonyan.pokertools</string>
    <string name="hp">幻想乃桜工房のHP</string>
    <string name="privacyString">プライバシーポリシー</string>
    <string name="opinionBox">意見・報告はこちら</string>
    <string name="reviewString">レビュー(PlayStore)</string>
</resources>
