<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/callButton1"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foldButton1" app:layout_constraintEnd_toStartOf="@+id/callButton1"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/callButton1"
            app:layout_constraintTop_toTopOf="@+id/callButton1"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/raise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/raiseButton1"
            app:layout_constraintStart_toEndOf="@+id/callButton1"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/callButton1"
            app:layout_constraintBottom_toBottomOf="@+id/callButton1"
            android:background="@drawable/color_menu_bar_background"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/betCoinButton1"
            app:layout_constraintStart_toStartOf="@+id/callButton1"
            app:layout_constraintEnd_toEndOf="@+id/callButton1"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/callButton1"/>
    <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/callButton2"
            android:rotation="90" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foldButton2"
            android:rotation="90"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/callButton2"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/raise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/raiseButton2"
            android:rotation="90"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/callButton2"
            app:layout_constraintStart_toStartOf="parent" android:background="@drawable/color_menu_bar_background"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/betCoinButton2"
            android:rotation="90" app:layout_constraintBottom_toBottomOf="@+id/callButton2"
            app:layout_constraintStart_toEndOf="@+id/callButton2"
            app:layout_constraintTop_toTopOf="@+id/callButton2"
    />
    <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/callButton3"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:rotation="180"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foldButton3"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/callButton3" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:rotation="180"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/raise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/raiseButton3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toStartOf="@+id/callButton3"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:rotation="180"
            android:background="@drawable/color_menu_bar_background"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/betCoinButton3"
            app:layout_constraintStart_toStartOf="@+id/callButton3"
            app:layout_constraintEnd_toEndOf="@+id/callButton3"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/callButton3"
            android:rotation="180"/>
    <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/callButton4"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:rotation="270"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foldButton4"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/callButton4"
            app:layout_constraintEnd_toEndOf="parent" android:rotation="270"
            android:background="@drawable/color_menu_bar_background"/>
    <Button
            android:text="@string/raise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/raiseButton4"
            app:layout_constraintBottom_toTopOf="@+id/callButton4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="64dp" android:rotation="270"
            android:background="@drawable/color_menu_bar_background"/>
    <TextView
            android:text="TextView"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:id="@+id/betCoinButton4"
            app:layout_constraintBottom_toBottomOf="@+id/callButton4"
            app:layout_constraintTop_toTopOf="@+id/callButton4" app:layout_constraintEnd_toStartOf="@+id/callButton4"
            android:rotation="270"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/endButton"
            android:background="@drawable/color_menu_bar_background"
            app:layout_constraintStart_toStartOf="@+id/raiseButton3" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/raiseButton3"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/endButton2"
            android:background="@drawable/color_menu_bar_background" android:layout_marginBottom="35dp"
            app:layout_constraintEnd_toEndOf="@+id/raiseButton1"
            app:layout_constraintBottom_toTopOf="@+id/raiseButton1"/>
</android.support.constraint.ConstraintLayout>